5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4350/executions/1596_1446.log
== TEST (2019-03-31 19:53:35) 
-- CODE:
a = float(input("quantos litros"))
total = a/3
pint(round(total,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    pint(round(total,3))
NameError: name 'pint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:53:47) 
-- CODE:
a = float(input("quantos litros"))
total = a/3
print(round(total,3))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:54:02) 
-- CODE:
a = float(input("quantos litros"))
total = a/3
print(round(total,3))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:54:20) 
-- CODE:
a = float(input("quantos litros"))
total = a/3
print(round(total, 3))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:54:28) 
-- CODE:
a = float(input("quantos litros"))
total = a/3
print(round(total, 3))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 19:54:35) 
-- CODE:
a = float(input("quantos litros"))
total = a/3
print(round(total, 3))
-- EXECUTION TIME:
0.140436
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
